# SmartFS-An-Adaptive-Embedded-Filesystem-with-Machine-Learning-Driven-Block-Allocation

./: CMakeLists.txt  README.md  ml_demo.img  paper.bib  paper.md  sd.img
.github/workflows/: build-paper.yml
include/: block_device.h  fsck.h  journal.h  ml_predict.h  smartfs.h  smartfs_config.h  viewer.h  wear.h
ml/: dtree.pkl  generate_dataset.py  logreg.pkl  ml_predict_generated.cpp  nn_norm_params.pkl  smartfs_dataset.csv  tiny_model.keras  train_models.py
src/: block_device.cpp  fsck.cpp  journal.cpp  ml_predict.cpp  smartfs.cpp  viewer.cpp  wear.cpp
teensy/smartfs_teensy/: smartfs_teensy.ino
tools/: crash.cpp  fsck_tool.cpp  ml_demo.cpp  run.cpp  shell.cpp  view.cpp  wear_tool.cpp
